# recepcionist-cibernots

./: CMakeLists.txt  README.md  package.xml
behavior_tree_xml/: Ask.xml  Dialogo.xml  Goto.xml  VisionPerson.xml  bt_recepcionist.xml  bt_visionchair.xml
include/BTS/: Ask.hpp  AskDrink.hpp  AskName.hpp  GoTo.hpp  IfChair.hpp  IndicateChair.hpp  Introduce.hpp  IntroduceGuest.hpp  OrderDrink.hpp  SearchChair.hpp  SendChair.hpp  ServeDrink.hpp  SpeechDrinks.hpp  SpeechName.hpp  SpeechNode.hpp  SpeechSayDrinks.hpp  SpeechSayName.hpp  SpeechWelcome.hpp  Talk.hpp  WaitPerson.hpp
include/BTS/DialogFlow/: DialogInterface.hpp
include/BTS/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
include/bt_nodes/: FindChair.hpp  GoChair.hpp  ReachedChair.hpp  SearchChair.hpp  SendChair.hpp
include/gb_dialog/: DialogInterfaces.hpp
include/perception_asr/: DarknetObjDetectionNode.hpp  ObjectDetectionTo3DfromDepthNode.hpp
include/pid/: PIDController.hpp
include/speech/: AskDrink.h  AskName.h  Chat.h  SayInfo.h  Speech_basics.hpp
include/tf2_detector/: ObjectDetectorImprovedNode.hpp
include/tfs/: pub_tf_chairs.hpp
launch/: actuation.launch.py  image2tf_obj.launch.py
maps/: labo.pgm  labo.yaml  labopro.pgm  labopro.yaml
src/: DialogInterfaces.cpp  bt_recepcionist.cpp  darknet_detection_main.cpp  detection_2d_to_3d_depth_main.cpp  detector_improved_main.cpp  node_tf_pub.cpp  speech_basics_main.cpp  speech_main.cpp
src/BTS/: Ask.cpp  AskDrink.cpp  AskName.cpp  GoTo.cpp  IfChair.cpp  IndicateChair.cpp  Introduce.cpp  IntroduceGuest.cpp  OrderDrink.cpp  SearchChair.cpp  SendChair.cpp  ServeDrink.cpp  SpeechDrinks.cpp  SpeechName.cpp  SpeechNode.cpp  SpeechSayDrinks.cpp  SpeechSayName.cpp  SpeechWelcome.cpp  Talk.cpp  WaitPerson.cpp
src/BTS/DialogFlow/: DialogInterface.cpp
src/bt_nodes/: FindChair.cpp  GoChair.cpp  ReachedChair.cpp  SearchChair.cpp  SendChair.cpp
src/perception_asr/: DarknetObjDetectionNode.cpp  ObjectDetectionTo3DfromDepthNode.cpp
src/pid/: PIDController.cpp
src/speech/: AskDrink.cpp  AskName.cpp  SayInfo.cpp  Speech_basics.cpp  speech_node.cpp
src/tf2_detector/: ObjectDetectorImprovedNode.cpp
src/tfs/: pub_tf_chairs.cpp
